# fritzboxtam

./: LICENSE  fritz.py  fritztam.py  pyproject.toml  requirements.txt
fritzboxtam/: __init__.py  cli.py
