[project]
name = "fritzboxtam"
version = "0.1.0"
description = ""
authors = [{name = "Markus Mohnen", email = "markus.mohnen@gmail.com>"}]
readme = "README.md"

[tool.poetry.scripts]
fritzboxtam = "fritzboxtam.cli:main"

[tool.poetry.dependencies]
python = "^3.8"
xmltodict = "^0.14.2"
requests = "^2.32.3"

[tool.poetry.group.cli.dependencies]
typer = "^0.15.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
